2019-08-06  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (USAGE, read_command_line): new option --cnf-line.
	(user_cnf_lines, user_cnf_nlines): new variables to store the args.
	(init_more): call kpathsea_cnf_line_env_progname on each line.

	* cnf.h (kpathsea_cnf_line_env_progname): declare new fn.
	* cnf.c (do_line): new argument ENV_PROGNAME,
	to insert settings in the environment instead of the hash table.
	(kpathsea_cnf_line_env_progname): entry point to call do_line
	with env_progname=true.
	(read_all_cnf): change do_line call to have env_progname=false.
	Also, don't create cnf_hash here, instead ...
	(kpathsea_cnf_get): ... here (if needed).

	* tests/cnfline.test: new test for --cnf-line.
	* tests/cnfline/texmf.cnf: new directory/file for cnfline.test.
	* Makefile.am (tests),
	(tests/cnfline.log),
	(EXTRA_DIST): add new test.
	* doc/kpathsea.texi (Path sources, Path searching options): doc.

2019-07-26  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS, etc.): include explicit latex,
	element at end so that files under latex/ are preferred to those
	under latex-dev/. From Ulrike Fischer.

	* texmf.cnf (TEXINPUTS.latex-dev, *-dev): new -dev format
	names for LaTeX pre-release testing.

2019-07-24  Akira Kakuto  <kakuto@w32tex.org>

	* texmf.cnf: Define command_line_encoding = utf-8 for
	Windows only.

2019-07-11  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS.lua{,jit}hb{,la}tex): four new engines,
	luahbtex with/without jit, with/without latex. Same path as non-hb.

2019-06-02  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS.harf{,la}tex): new engine.
	Turns out we want harf{,la}tex/ directories.

2019-05-05  Karl Berry  <karl@tug.org>

	* texmf.cnf: missed top 2018's.

2019-05-03  Karl Berry  <karl@tug.org>

	* version.ac: 6.3.2/dev since TL'19 is released.

2019-04-07  Karl Berry  <karl@freefriends.org>

	* TeX Live 2019.

2019-03-25  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (TEXMFDBS),